Actions
Bug #10761
closeddls: NULL pointer errors
Start date:
2019-04-12
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
../../common/io/dls/dls_mgmt.c: In function 'dls_devnet_prop_task': ../../common/io/dls/dls_mgmt.c:632:22: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] ddp->dd_prop_taskid = NULL; ^ ../../common/io/dls/dls_mgmt.c: In function 'dls_devnet_prop_task_wait': ../../common/io/dls/dls_mgmt.c:644:29: error: comparison between pointer and integer [-Werror] while (ddp->dd_prop_taskid != NULL) ^~ ../../common/io/dls/dls_mgmt.c: In function 'dls_devnet_set': ../../common/io/dls/dls_mgmt.c:860:52: error: comparison between pointer and integer [-Werror] if (!ddp->dd_prop_loaded && (ddp->dd_prop_taskid == NULL)) { ^~ ../../common/io/dls/dls_mgmt.c: In function 'dls_devnet_unset': ../../common/io/dls/dls_mgmt.c:923:48: error: comparison between pointer and integer [-Werror] (ddp->dd_tref != 0 || ddp->dd_prop_taskid != NULL))) { ^~ ../../common/io/dls/dls_mgmt.c:954:54: error: comparison between pointer and integer [-Werror] while ((ddp->dd_tref != 0) || (ddp->dd_prop_taskid != NULL)) ^~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 639c732ede1f837c0ccd952d813f5b85fc9e0abf
commit 639c732ede1f837c0ccd952d813f5b85fc9e0abf Author: Toomas Soome <tsoome@me.com> Date: 2019-04-18T05:56:25.000Z 10761 dls: NULL pointer errors Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions